Multiple UDIM tiles are not baked #95190

Closed
opened 2022-01-25 01:58:43 +01:00 by Daniel Bystedt · 17 comments
Member

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: (newest version of Blender that worked as expected)

Short description of error
Dalai Felinto asked me to report this as a bug via blender.chat

When trying to bake to an object with uv's outside of UDIM 1001 (outside 0-1 space), only the pixels in UDIM 1001 (inside 0-1 space) is baked. This happens even when the target texture contains multiple UDIM tiles


Text objects that I try to bake to a plane with 2 UDIM tiles.
image.png


Expected result
image.png


Actual result
image.png


Exact steps for others to reproduce the error

  1. Open the attached .blend
    bake to udims.blend
  2. Press "fill tile" in the uv editor
    image.png
  3. Select the text objects and then the mesh object "bake target"
  4. Press bake in the render properties
bpy.ops.object.bake(type='EMIT')
  1. You should now be able to see an incorrect bake result in the uv ediors image
**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: (newest version of Blender that worked as expected) **Short description of error** Dalai Felinto asked me to report this as a bug via blender.chat When trying to bake to an object with uv's outside of UDIM 1001 (outside 0-1 space), only the pixels in UDIM 1001 (inside 0-1 space) is baked. This happens even when the target texture contains multiple UDIM tiles ________________________________________ Text objects that I try to bake to a plane with 2 UDIM tiles. ![image.png](https://archive.blender.org/developer/F12822148/image.png) ________________________________________ Expected result ![image.png](https://archive.blender.org/developer/F12822150/image.png) ________________________________________ Actual result ![image.png](https://archive.blender.org/developer/F12822157/image.png) ________________________________________ **Exact steps for others to reproduce the error** 1. Open the attached .blend [bake to udims.blend](https://archive.blender.org/developer/F12822164/bake_to_udims.blend) 2. Press "fill tile" in the uv editor ![image.png](https://archive.blender.org/developer/F12822143/image.png) 3. Select the text objects and then the mesh object "bake target" 4. Press bake in the render properties ``` bpy.ops.object.bake(type='EMIT') ``` 5. You should now be able to see an incorrect bake result in the uv ediors image
Author
Member

Added subscriber: @DanielBystedt

Added subscriber: @DanielBystedt
First-time contributor

#85815 was marked as duplicate of this issue

#85815 was marked as duplicate of this issue

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

UDIM baking still remains to be implemented and, I think, has never worked correctly. 2.93.x shows a slightly different result but ultimately the same. See #72390/T85815

@DanielBystedt Did prior versions work better and/or more completely than 3.0?

UDIM baking still remains to be implemented and, I think, has never worked correctly. 2.93.x shows a slightly different result but ultimately the same. See #72390/T85815 @DanielBystedt Did prior versions work better and/or more completely than 3.0?
Author
Member

Ah, I should have added that info. You are correct. UDIM has never worked when it comes to baking. I asked Dalai Felinto if I should add it as a design task or similair, but he suggested I'd add it as a bug.

It looks like the documentation is all there in #72390 (Improve UDIM functionality) / #85815 (can't bake udims texture). Perhaps this bug report just becomes an annoying duplicate. Feel free to remove it or flag as duplicate if you like.

Ah, I should have added that info. You are correct. UDIM has never worked when it comes to baking. I asked Dalai Felinto if I should add it as a design task or similair, but he suggested I'd add it as a bug. It looks like the documentation is all there in #72390 (Improve UDIM functionality) / #85815 (can't bake udims texture). Perhaps this bug report just becomes an annoying duplicate. Feel free to remove it or flag as duplicate if you like.

Added subscribers: @Happy_Phal, @hemul, @tomsmalley, @lichtwerk

Added subscribers: @Happy_Phal, @hemul, @tomsmalley, @lichtwerk

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Making this report the primary "To Do" item since it is more complete vs the older one. When someone attempts to implement baking properly they can use this report for verification etc.

Making this report the primary "To Do" item since it is more complete vs the older one. When someone attempts to implement baking properly they can use this report for verification etc.
First-time contributor

Added subscriber: @vr_sebas

Added subscriber: @vr_sebas
Member

Added subscriber: @kursadk

Added subscriber: @kursadk
Member

Are we going to see this implemented in 3.2?

Are we going to see this implemented in 3.2?
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
First-time contributor

This issue was referenced by 6787cc13d4

This issue was referenced by 6787cc13d4efef19eb708e1912356f8c1d4d2e01

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-04-22 23:18:58 +02:00
Author
Member

Amazing! You are my hero Brecht!

It seems that UDIM baking now works just fine with setup in the shading editor. However UDIM baking still does not seem to work with the multi resolution modifier

image.png

Amazing! You are my hero Brecht! It seems that UDIM baking now works just fine with setup in the shading editor. However UDIM **baking still does not seem to work with the multi resolution modifier** ![image.png](https://archive.blender.org/developer/F13022167/image.png)
Author
Member

My mistake. Bake from multires works. I must have been tired when I tried it last night

My mistake. Bake from multires works. I must have been tired when I tried it last night
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95190
No description provided.