source/blender/editors/object/object_bake.c
@@ -172,28 +172,35 @@ static bool multiresbake_check(bContext *C, wmOperator *op)
           ok = false;
         }
         else {
-          ImBuf *ibuf = BKE_image_acquire_ibuf(ima, NULL, NULL);
+          LISTBASE_FOREACH (ImageTile *, tile, &ima->tiles) {
+            ImageUser iuser;
+            BKE_imageuser_default(&iuser);
+            iuser.tile = tile->tile_number;
 
-          if (!ibuf) {
-            BKE_report(op->reports, RPT_ERROR, "Baking should happen to image with image buffer");
+            ImBuf *ibuf = BKE_image_acquire_ibuf(ima, &iuser, NULL);
 
-            ok = false;
-          }
-          else {
-            if (ibuf->rect == NULL && ibuf->rect_float == NULL) {
+            if (!ibuf) {
+              BKE_report(
+                  op->reports, RPT_ERROR, "Baking should happen to image with image buffer");
+
               ok = false;
             }
+            else {
+              if (ibuf->rect == NULL && ibuf->rect_float == NULL) {
+                ok = false;
+              }
 
-            if (ibuf->rect_float && !(ELEM(ibuf->channels, 0, 4))) {
-              ok = false;
+              if (ibuf->rect_float && !(ELEM(ibuf->channels, 0, 4))) {
+                ok = false;
+              }
+
+              if (!ok) {
+                BKE_report(op->reports, RPT_ERROR, "Baking to unsupported image type");
+              }
             }
 
-            if (!ok) {
-              BKE_report(op->reports, RPT_ERROR, "Baking to unsupported image type");
-            }
+            BKE_image_release_ibuf(ima, ibuf, NULL);
           }
-
-          BKE_image_release_ibuf(ima, ibuf, NULL);
         }
       }
     }
@@ -274,21 +281,27 @@ static void clear_single_image(Image *image, ClearFlag flag)
   const float disp_solid[4] = {0.5f, 0.5f, 0.5f, 1.0f};
 
   if ((image->id.tag & LIB_TAG_DOIT) == 0) {
-    ImBuf *ibuf = BKE_image_acquire_ibuf(image, NULL, NULL);
+    LISTBASE_FOREACH (ImageTile *, tile, &image->tiles) {
+      ImageUser iuser;
+      BKE_imageuser_default(&iuser);
+      iuser.tile = tile->tile_number;
 
-    if (flag == CLEAR_TANGENT_NORMAL) {
-      IMB_rectfill(ibuf, (ibuf->planes == R_IMF_PLANES_RGBA) ? nor_alpha : nor_solid);
-    }
-    else if (flag == CLEAR_DISPLACEMENT) {
-      IMB_rectfill(ibuf, (ibuf->planes == R_IMF_PLANES_RGBA) ? disp_alpha : disp_solid);
-    }
-    else {
-      IMB_rectfill(ibuf, (ibuf->planes == R_IMF_PLANES_RGBA) ? vec_alpha : vec_solid);
-    }
+      ImBuf *ibuf = BKE_image_acquire_ibuf(image, &iuser, NULL);
 
-    image->id.tag |= LIB_TAG_DOIT;
+      if (flag == CLEAR_TANGENT_NORMAL) {
+        IMB_rectfill(ibuf, (ibuf->planes == R_IMF_PLANES_RGBA) ? nor_alpha : nor_solid);
+      }
+      else if (flag == CLEAR_DISPLACEMENT) {
+        IMB_rectfill(ibuf, (ibuf->planes == R_IMF_PLANES_RGBA) ? disp_alpha : disp_solid);
+      }
+      else {
+        IMB_rectfill(ibuf, (ibuf->planes == R_IMF_PLANES_RGBA) ? vec_alpha : vec_solid);
+      }
 
-    BKE_image_release_ibuf(image, ibuf, NULL);
+      image->id.tag |= LIB_TAG_DOIT;
+
+      BKE_image_release_ibuf(image, ibuf, NULL);
+    }
   }
 }
 
